# Transfromer_chess

./: .gitignore  README.md  pyproject.toml
notebooks/: train_value_model.ipynb  train_value_model_colab.ipynb
src/transformer_chess/: __init__.py  cli.py  dataset.py  device.py  encoding.py  inference.py  lichess_eval.py  model.py  move_selection.py  train.py
